# Koj

./: .gitignore  DBRESET  README.md  db.sqlite3  manage.py
Koj/: settings.py  urls.py  wsgi.py
api/: admin.py  apps.py  models.py  mq.py  seeds.py  serializers.py  tests.py  urls.py  views.py
judge/: Gemfile  Makefile  README.md  judger.rb  sshkey.sh
judge/conf/: judger.conf
judge/conf/languages/: Ec  Ecpp  Epython2  Epython3  Njava  Nlua  Nruby  README
judge/data/example/: 1.out
judge/data/test/: 10.in  4.in  5.in
judge/judged/: CMakeLists.txt  Makefile  README.md
judge/judged/binding/Ruby/: judge.c
judge/judged/binding/test/: Makefile  Test.c  extconf.rb  mkmf.sh
judge/judged/example/: 1.in  Makefile  main  main.c  prof.lua  test.rb  testd.rb  testmq.rb
judge/judged/include/: comparor.h  compiler.h  judge.h  logger.h  runner.h  server.h  types.h  utils.h
judge/judged/src/: comparor.c  compiler.c  judge.c  logger.c  main.c  runner.c  server.c  utils.c
judge/judged/test/: Makefile  cpp_meta.cpp  test.rb
judge/test/: test.rb  test_pressure.rb  test_pressure_from_string.rb
judge/test/data/: 1.in  2.in  3.in  6.in  7.in  8.in  9.in  README  data.sh
judge/tmp/: README
ssl/: koj.iriscraft.tk.crt  koj.iriscraft.tk.csr  koj.iriscraft.tk.key  koj.iriscraft.tk.origin.key  localhost.crt  localhost.csr  localhost.key  localhost.origin.key  runsslserver
test/: db_purge_submit.py  mq_purge.rb  mq_show.rb  mq_status.rb  submit_test_c.py  visit.py  visitor.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: main.js
(+23 files in other folders)
